compiler/src/test/resources/golden/errors/exh_missing_list.dawn
fn first(xs: List[Int]) -> Int =
  match xs {
    [x] -> x
  }
