compiler/src/test/resources/golden/errors/exh_missing_list.err
error: non-exhaustive match, missing: [], [_, _, ..]
  --> exh_missing_list.dawn:2:3
  |
2 |   match xs {
  |   ^^^^^^^^^^
  = hint: add an unguarded catch-all arm (a binding or _)
